@@ -1,3 +1,10 @@
+2011-09-29  Armando Basile  <hmandevteam@gmail.com>
+
+	* comex-gtk.csproj:
+	* MainClass.cs:
+	* AssemblyInfo.cs:
+	* MainWindowClass.Designer.cs: - release 0.1.6.0
+
 2011-09-13  Armando Basile  <hmandevteam@gmail.com>
 
 	* comex-gtk.csproj:
